Fix icon filter collapse

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -177,7 +177,7 @@ a.btn:focus.btn-secondary{
                     flex: 1;
                 }
 
-                .btn-collapse{
+                .icon-collapse{
                     font-size: 12px;
                 }
             }
